# VLN-API

./: .gitignore  README.md  pyproject.toml  requirements.txt
.trellis/: .template-hashes.json
.trellis/tasks/00-bootstrap-guidelines/: prd.md  task.json
.trellis/workspace/sjtumrgx/: index.md  journal-1.md
config/: config.yaml
inference/: config.py  deploy.sh  manage.sh  pyproject.toml  start_server.py
openspec/changes/archive/2026-02-02-embodied-navigation-system/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-02-embodied-navigation-system/specs/llm-client/: spec.md
openspec/changes/archive/2026-02-02-embodied-navigation-system/specs/visualization/: spec.md
openspec/specs/scene-analysis/: spec.md
openspec/specs/task-reasoning/: spec.md
openspec/specs/video-capture/: spec.md
openspec/specs/waypoint-generation/: spec.md
src/embodied_nav/: __init__.py  __main__.py  main.py  unified_analyzer.py
src/embodied_nav/llm_client/: __init__.py  base.py  gemini.py  image_utils.py  openai_compat.py
src/embodied_nav/scene_analysis/: __init__.py  analyzer.py  prompts.py  schema.py
src/embodied_nav/task_reasoning/: __init__.py  prompts.py  reasoner.py
src/embodied_nav/video_capture/: __init__.py  capture.py
src/embodied_nav/visualization/: __init__.py  visualizer.py
src/embodied_nav/waypoint_generation/: __init__.py  generator.py
tests/: __init__.py  test_llm_client.py  test_scene_analysis.py  test_task_reasoning.py  test_video_capture.py  test_visualization.py  test_waypoint_generation.py
